[package]
name = "web3"
version = "0.2.0"
description = "Ethereum JSON-RPC client."
homepage = "https://github.com/tomusdrw/rust-web3"
repository = "https://github.com/tomusdrw/rust-web3"
documentation = "https://tomusdrw.github.io/rust-web3/web3/index.html"
license = "MIT"
keywords = ["jsonrpc", "web3", "ethereum", "rpc", "client", "cita"]
authors = ["Tomasz Drwięga <tomasz@ethcore.io>"]

[dependencies]
arrayvec = "0.3"
ethabi = "4.0"
futures = "0.1"
jsonrpc-core = "7.0"
log = "0.3"
parking_lot = "0.4"
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-timer = "0.1"
error-chain = "0.11.0-rc.2"
# Optional deps
hyper = { version = "0.11", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-uds = { version = "0.1", optional = true }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
jsonrpc_types = {git = "https://github.com/cryptape/cita.git", branch = "develop" }

[dev-dependencies]
# For examples
tokio-core = "0.1"
rustc-hex = "1.0"

[features]
default = ["http", "ipc","secp256k1", "sha3hash"]
# TODO [ToDr] move transports to separate crates
http = ["hyper", "tokio-core"]
ipc = ["tokio-uds", "tokio-core", "tokio-io"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "proof/sha3hash"]

[workspace]
